--- a/application.yml
+++ b/application.yml
@@ -2,3 +2,8 @@ spring:
   profiles: dev
   application: 
     name: config-dev-8888
+--- 
+spring: 
+  profiles: test
+  application: 
+    name: config-test-8888
